--- a/PetrisNetsGame/app/src/main/AndroidManifest.xml
+++ b/PetrisNetsGame/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PetrisNetsGame">
-
+        <activity android:name=".PauseActivity"></activity>
         <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,10 +17,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".GameActivity"></activity>
+        <activity android:name=".MultiplayerGameActivity_player1" />
         <activity android:name=".PlayersActivity" />
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
