--- a/PetrisNetsGame/app/src/main/AndroidManifest.xml
+++ b/PetrisNetsGame/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".MultiplayerGameActivity_player1" />
+        <activity android:name=".MultiplayerGameActivity_player2"/>
         <activity android:name=".PlayersActivity" />
         <activity android:name=".MainActivity" />
     </application>
