--- a/PetrisNetsGame/app/src/main/AndroidManifest.xml
+++ b/PetrisNetsGame/app/src/main/AndroidManifest.xml
@@ -21,6 +21,10 @@
         <activity android:name=".MultiplayerGameActivity_player2"/>
         <activity android:name=".PlayersActivity" />
         <activity android:name=".MainActivity" />
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
